--- a/slots.html
+++ b/slots.html
@@ -3,12 +3,18 @@
     <head>
         <meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><meta name="robots" content="noindex, nofollow">
         <link rel="stylesheet" href="./slots.css" type="text/css">
-        <script src="./js/jquery-3.7.1.min.js"></script>
-        <script src="./js/autoSpin.js"></script>
-        <script src="./slots.js"></script>
+        <script type="text/javascript" src="./js/jquery-3.7.1.min.js"></script>
+        <script type="text/javascript" src="./js/autoSpin.js"></script>
+        <script type="text/javascript" src="./slots.js"></script>
     </head>
-    <body onload="startSlots()">
+    <body>
         <div id="wrapper">
+            <div id="info">
+                <p id="credits"></p>
+                <p id="log"></p>
+            </div>
+            <canvas id="slotsArea">
+            </canvas>
             <div id="autoSpinButton" class="off" onclick="AutoSpin_Toggle()">
             </div>
             <div id="lineButton">
@@ -19,6 +25,13 @@
             </div>
             <div id="spinButton">
             </div>
+            <div id="info">
+                <p id="credits"></p>
+                <p id="log"></p>
+              </div>
         </div>
+        <script type="text/javascript">
+            init();
+        </script>
     </body>
 </html>
