--- a/slots.html
+++ b/slots.html
@@ -15,9 +15,9 @@
             </div>
             <div id="lineButton" onclick="increaseLines()">
             </div>
-            <div id="betButton">
+            <div id="betButton" onclick="increaseBet()">
             </div>
-            <div id="maxBetButton">
+            <div id="maxBetButton" onclick="setBetMax()">
             </div>
             <div id="spinButton" onclick="spin()">
             </div>
@@ -27,8 +27,8 @@
             <div id="lines_div">
                 <p id="lines"></p>
             </div>
-            <div>
-                <p id="log"></p>
+            <div id="bet_div">
+                <p id="bet"></p>
             </div>
         </div>
         <script type="text/javascript">
