Adjust code for looperlands

--- a/slots.html
+++ b/slots.html
@@ -2,10 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><meta name="robots" content="noindex, nofollow">
-        <link rel="stylesheet" href="./slots.css" type="text/css">
-        <script type="text/javascript" src="./js/jquery-3.7.1.min.js"></script>
+        <link rel="stylesheet" href="./apps/bitcorn/FUNKYSPINZ_v2/slots.css" type="text/css">
+        <!-- This code works in the slot repository, but file paths needed to be change for looperlands -->
+        <!-- <script type="text/javascript" src="./js/jquery-3.7.1.min.js"></script>
         <script type="text/javascript" src="./js/autoSpin.js"></script>
-        <script type="text/javascript" src="./slots.js"></script>
+        <script type="text/javascript" src="./slots.js"></script> -->
+
+        <!-- Use the code below for looperlands -->
+        <script type="text/javascript" src="./apps/bitcorn/FUNKYSPINZ_v2/js/jquery-3.7.1.min.js"></script>
+        <script type="text/javascript" src="./apps/bitcorn/FUNKYSPINZ_v2/js/autoSpin.js"></script>
+        <script type="text/javascript" src="./apps/bitcorn/FUNKYSPINZ_v2/slots.js"></script>
     </head>
     <body>
         <div id="wrapper">
