code simplification and graphical updates

--- a/slots.html
+++ b/slots.html
@@ -11,24 +11,17 @@
         <div id="wrapper">
             <canvas id="slotsArea">
             </canvas>
-            <div id="autoSpinButton" class="off" onclick="AutoSpin_Toggle()">
-            </div>
-            <div id="lineButton" onclick="increaseLines()">
-            </div>
-            <div id="betButton" onclick="increaseBet()">
-            </div>
-            <div id="maxBetButton" onclick="setBetMax()">
-            </div>
-            <div id="spinButton" onclick="spin()">
-            </div>
-            <div id="credit_div">
-                <p id="credits"></p>
-            </div>
-            <div id="lines_div">
-                <p id="lines"></p>
-            </div>
-            <div id="bet_div">
-                <p id="bet"></p>
+            <div id="buttonPanel">
+                <div id="autoSpinButton" class="off" onclick="AutoSpin_Toggle()">
+                </div>
+                <div id="lineButton" onclick="increaseLines()">
+                </div>
+                <div id="betButton" onclick="increaseBet()">
+                </div>
+                <div id="maxBetButton" onclick="setBetMax()">
+                </div>
+                <div id="spinButton" onclick="spin()">
+                </div>
             </div>
         </div>
         <script type="text/javascript">
